workload/services/homeassistant/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homeassistant
  labels:
    app.kubernetes.io/name: kubevirt-vms
    app.kubernetes.io/instance: homeassistant
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-sd
    external-dns.alpha.kubernetes.io/hostname: homeassistant.lan.speziato.dev
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "homeassistant.lan.speziato.dev"
      secretName: homeassistant-tls
  rules:
    - host: "homeassistant.lan.speziato.dev"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: homeassistant
              port:
                name: "http"
